Se separan las credenciales de DB del proyecto principal

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -32,18 +32,6 @@
 </head>
 
 <body id="index">
-  <div id="style-switcher">
-    <a href="#" class="style-toggle"><i class="fa fa-cog"></i></a>
-    <h6>Color palette</h6>
-    <ul class="template-set-color">
-      <li><a data-color="Orange" class="color orange" href="#" title="style"></a></li>
-      <li><a data-color="Blue" class="color blue" href="#" title="style-blue"></a></li>
-      <li><a data-color="Green" class="color green" href="#" title="style-green"></a></li>
-      <li><a data-color="Pink" class="color pink" href="#" title="style-pink"></a></li>
-      <li><a data-color="Berry" class="color berry" href="#" title="style-berry"></a></li>
-    </ul>
-  </div>
-	
   <!-- Preloader -->
   <div id="mask">
     <div id="loader"><img src="static/img/preloader.gif" alt="preloader" /></div>
@@ -51,7 +39,7 @@
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
   <!-- Hero Section -->
-  <section id="hero" class="light color">
+  <section id="hero" class="light color" style="background-image=(static/bg/{{bg}})">
     <div class="overlay color"></div>
       <div class="container">
         <div class="home-bg">
@@ -69,7 +57,15 @@
           </nav>
         <div class="hero-content text-center ">
           <div class="hero-small">
-            <hr /><span><span class="fa fa-calendar"></span>9-10 Octubre, 9:00 <div class="sep"></div> <span class="fa fa-map-marker"></span>UTFSM, Valparaíso, Chile</span> <hr />
+            <hr />
+            <span>
+              <span class="fa fa-calendar"></span>
+              <a href="#schedule">9-10 Octubre, 9:00 </a>
+              <div class="sep"></div>
+              <span class="fa fa-map-marker"></span>
+              <a href="#map">UTFSM, Valparaíso, Chile</a>
+            </span>
+            <hr />
           </div>
           <div class="hero-big">Valparaíso Mobile Conf</div>
           <div class="hero-normal">Conferencia sobre <strong>tecnologías móviles</strong></div>
