--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
   <!-- Hero Section -->
-  <section id="hero" class="light color">
+  <section id="hero" class="light color" style="background-image=(static/bg/{{bg}})">
     <div class="overlay color"></div>
       <div class="container">
         <div class="home-bg">
@@ -69,7 +69,15 @@
           </nav>
         <div class="hero-content text-center ">
           <div class="hero-small">
-            <hr /><span><span class="fa fa-calendar"></span>9-10 Octubre, 9:00 <div class="sep"></div> <span class="fa fa-map-marker"></span>UTFSM, Valparaíso, Chile</span> <hr />
+            <hr />
+            <span>
+              <span class="fa fa-calendar"></span>
+              <a href="#schedule">9-10 Octubre, 9:00 </a>
+              <div class="sep"></div>
+              <span class="fa fa-map-marker"></span>
+              <a href="#map">UTFSM, Valparaíso, Chile</a>
+            </span>
+            <hr />
           </div>
           <div class="hero-big">Valparaíso Mobile Conf</div>
           <div class="hero-normal">Conferencia sobre <strong>tecnologías móviles</strong></div>
