Se eliminan los pyc y temporales creados accidentalmente

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -39,7 +39,7 @@
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
   <!-- Hero Section -->
-  <section id="hero" class="light color" style="background-image=(static/bg/{{bg}})">
+  <section id="hero" class="light color" style="background-image=url(/static/bg/{{bg}});">
     <div class="overlay color"></div>
       <div class="container">
         <div class="home-bg">
