--- a/static/index.html
+++ b/static/index.html
@@ -32,18 +32,6 @@
 </head>
 
 <body id="index">
-  <div id="style-switcher">
-    <a href="#" class="style-toggle"><i class="fa fa-cog"></i></a>
-    <h6>Color palette</h6>
-    <ul class="template-set-color">
-      <li><a data-color="Orange" class="color orange" href="#" title="style"></a></li>
-      <li><a data-color="Blue" class="color blue" href="#" title="style-blue"></a></li>
-      <li><a data-color="Green" class="color green" href="#" title="style-green"></a></li>
-      <li><a data-color="Pink" class="color pink" href="#" title="style-pink"></a></li>
-      <li><a data-color="Berry" class="color berry" href="#" title="style-berry"></a></li>
-    </ul>
-  </div>
-	
   <!-- Preloader -->
   <div id="mask">
     <div id="loader"><img src="static/img/preloader.gif" alt="preloader" /></div>
@@ -51,7 +39,7 @@
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
   <!-- Hero Section -->
-  <section id="hero" class="light color" style="background-image=(static/bg/{{bg}})">
+  <section id="hero" class="light color" style="background-image=url(/static/bg/{{bg}});">
     <div class="overlay color"></div>
       <div class="container">
         <div class="home-bg">
