Se agregan los BG para la vista inicial. Se carga uno aleatorio cuando entras a la web.

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -39,7 +39,7 @@
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
   <!-- Hero Section -->
-  <section id="hero" class="light color" style="background-image=url(/static/bg/{{bg}});">
+  <section id="hero" class="light color" style="background-image: url(/static/bg/{{bg}});">
     <div class="overlay color"></div>
       <div class="container">
         <div class="home-bg">
@@ -60,10 +60,10 @@
             <hr />
             <span>
               <span class="fa fa-calendar"></span>
-              <a href="#schedule">9-10 Octubre, 9:00 </a>
+              <a class="indicator" href="#schedule">9-10 Octubre, 9:00 </a>
               <div class="sep"></div>
               <span class="fa fa-map-marker"></span>
-              <a href="#map">UTFSM, Valparaíso, Chile</a>
+              <a class="indicator" href="#map">UTFSM, Valparaíso, Chile</a>
             </span>
             <hr />
           </div>
@@ -213,7 +213,7 @@
             <div class="stat"><span class="value" data-from="0" data-to="20">20</span></div>
             <div class="stat-info">horas de programación</div>
             <hr />
-            <p class="small">Porque dormir no es para mentes creadoras.</p>
+            <p class="small">Porque una mente creativa no duerme.</p>
           </div>
         </div>
         <!-- ESPACIO PARA LA EXPO
