--- a/static/index.html
+++ b/static/index.html
@@ -265,41 +265,44 @@
         <div class="tab-content">
           <div class="tab-pane fade in active" id="DayOne">
 
-           <!-- Child 1 Nav Tabs -->
+           <!-- Día 1-->
            <ul class="nav nav-tabs">
-             <li class="active"><a href="#DayOne-1" data-toggle="tab">Auditorium 1</a></li>
-             <li><a href="#DayOne-2" data-toggle="tab">Auditorium 2</a></li>
-             <li><a href="#DayOne-3" data-toggle="tab">Auditorium 3</a></li>
-            <li><a href="#DayOne-4" data-toggle="tab">Class 2</a></li>
+             <li class="active"><a href="#DayOne-1" data-toggle="tab">Salón de Honor </a></li>
+             <li><a href="#DayOne-2" data-toggle="tab">F-106</a></li>
           </ul>
 
-        <!-- Child 1 Tab panes -->
+        <!-- Día 1 - Salón de Honor -->
         <div class="tab-content">
           <div class="tab-pane fade in active" id="DayOne-1">
-          <div class="panel-group timeline-schedule" id="panelTimelineOne">
-            <div class="panel panel-default">
-            <div class="speaker-wrapper">
-              <img src="static/img/speaker/speaker-1.jpg" class="img-responsive img-circle" alt="speaker-1" />
+            <div class="panel-group timeline-schedule" id="panelTimelineOne">
+
+              <!-- Charlista -->
+              <div class="panel panel-default">
+                <div class="speaker-wrapper">
+                  <img src="static/img/speaker/speaker-1.jpg" class="img-responsive img-circle" alt="speaker-1" />
+                </div>
+                <div class="panel-heading">
+                  <div class="panel-title">
+                    <div class="time"><i class="fa fa-clock-o"></i> 9:00 AM</div>
+                    <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne">
+                      Acreditación
+                      <div class="pull-right fa fa-angle-up"></div>
+                      <div class="pull-right fa fa-angle-down"></div>
+                    </a>
+                  </div>
+                </div>
+                <div id="itemOne" class="panel-collapse collapse in">
+                  <div class="panel-body">
+                    <article>
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                      <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
+                    </article>
+                  </div>
+               </div>
             </div>
-            <div class="panel-heading">
-              <div class="panel-title">
-              <div class="time"><i class="fa fa-clock-o"></i> 2:20 PM</div>
-              <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne">
-                Starting your own business
-                <div class="pull-right fa fa-angle-up"></div>
-                <div class="pull-right fa fa-angle-down"></div>
-              </a>
-              </div>
-            </div>
-            <div id="itemOne" class="panel-collapse collapse in">
-              <div class="panel-body">
-              <article>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
-              </article>
-              </div>
-            </div>
-            </div>
+            <!-- END Charlista -->
+
+
             <div class="panel panel-default">
             <div class="speaker-wrapper">
               <img src="static/img/speaker/speaker-2.jpg" class="img-responsive img-circle" alt="speaker-2" />
