--- a/main/static/index.html
+++ b/main/static/index.html
@@ -38,6 +38,7 @@
   </div>
 
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
+
   <!-- Hero Section -->
   <section id="hero" class="light color" style="background-image: url(/static/bg/{{bg}});">
     <div class="overlay color"></div>
@@ -241,10 +242,11 @@
       <section class="nav-tabs-default hidden-xs">
       <!-- Parent Nav Tabs -->
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#DayOne" data-toggle="tab">
-            <div class="title">Día 1</div>
-            <div class="subtitle">09/10/2015</div>
-           </a>
+          <li class="active">
+            <a href="#DayOne" data-toggle="tab">
+              <div class="title">Día 1</div>
+              <div class="subtitle">09/10/2015</div>
+            </a>
           </li>
           <li>
             <a href="#DayTwo" data-toggle="tab">
@@ -253,7 +255,7 @@
             </a>
           </li>
           <li>
-            <a href="#DayThree" data-toggle="tab">
+            <a href="#HackNight" data-toggle="tab">
               <div class="title">Hackathon</div>
               <div class="subtitle">09-10/10/2015</div>
             </a>
@@ -262,173 +264,134 @@
 
         <!-- Parent Tab panes -->
         <div class="tab-content">
+
+          <!-- DIA 1 -->
           <div class="tab-pane fade in active" id="DayOne">
 
-           <!-- Child 1 Nav Tabs -->
-           <ul class="nav nav-tabs">
-             <li class="active"><a href="#DayOne-1" data-toggle="tab">Charlas - Salón de Honor</a></li>
-             <li><a href="#DayOne-2" data-toggle="tab">Talleres - F-106</a></li>
-          </ul>
+            <!-- DIA 1 Tabs -->
+            <ul class="nav nav-tabs">
+              <li class="active"><a href="#DayOne-1" data-toggle="tab">Charlas - Salón de Honor</a></li>
+              <li><a href="#DayOne-2" data-toggle="tab">Talleres - F-106</a></li>
+            </ul>
 
-        <!-- Child 1 Tab panes -->
-        <div class="tab-content">
-          <div class="tab-pane fade in active" id="DayOne-1">
-          <div class="panel-group timeline-schedule" id="panelTimelineOne">
-            <div class="panel panel-default">
-            <div class="speaker-wrapper">
-              <img src="static/img/speaker/speaker-1.jpg" class="img-responsive img-circle" alt="speaker-1" />
-            </div>
-            <div class="panel-heading">
-              <div class="panel-title">
-              <div class="time"><i class="fa fa-clock-o"></i> 2:20 PM</div>
-              <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne">
-                Starting your own business
-                <div class="pull-right fa fa-angle-up"></div>
-                <div class="pull-right fa fa-angle-down"></div>
-              </a>
+            <!-- DIA 1 Tab panes -->
+            <div class="tab-content">
+
+              <!-- DIA 1 - TRACK 1-->
+              <div class="tab-pane fade in active" id="DayOne-1">
+                <div class="panel-group timeline-schedule" id="panelTimelineOne">
+
+                  <!-- CHARLAS -->
+                  {% for paper in paper_list %}
+                  <div class="panel panel-default">
+                    <div class="speaker-wrapper">
+                      <img src="/media/{{paper.author.1.photo_thumb}}" class="img-responsive img-circle" alt="{{paper.author.1.get_full_name}}" />
+                    </div>
+                    <div class="panel-heading">
+                      <div class="panel-title">
+                        <div class="time"><i class="fa fa-clock-o"></i>
+                          {{paper.start_time|date:"H:i"}}
+                        </div>
+                        <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item{{paper.id}}">
+                          {{paper.title}}
+                          <div class="pull-right fa fa-angle-up"></div>
+                          <div class="pull-right fa fa-angle-down"></div>
+                        </a>
+                      </div>
+                    </div>
+
+                    <div id="item{{paper.id}}" class="panel-collapse collapse in">
+                      <div class="panel-body">
+                        <article>
+                          <p>{{ paper.abstract }}</p>
+                          <p class="author"><a href="{{paper.author.1.twitter}}"><strong><i class="fa fa-user"></i> {{paper.author.1.get_full_name}}</strong></a></p>
+                        </article>
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                  <!-- END CHARLAS -->
+
+                </div>
               </div>
-            </div>
-            <div id="itemOne" class="panel-collapse collapse in">
-              <div class="panel-body">
-              <article>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
-              </article>
+              <!-- END DIA 1 - TRACK 1-->
+
+              <!-- DIA 1 - TRACK 2 -->
+              <div class="tab-pane fade" id="DayOne-2">
+                <article>
+                  <p>Los talleres aún no están confirmados.</p>
+                </article>
               </div>
+              <!-- END DIA 1 - TRACK 2 -->
             </div>
-            </div>
-            <div class="panel panel-default">
-            <div class="speaker-wrapper">
-              <img src="static/img/speaker/speaker-2.jpg" class="img-responsive img-circle" alt="speaker-2" />
-            </div>
-            <div class="panel-heading">
-              <div class="panel-title">
-              <div class="time"><i class="fa fa-clock-o"></i> 5:40 PM</div>
-              <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemTwo" class="collapsed">
-                Scaling into crowded space
-                <div class="pull-right fa fa-angle-up"></div>
-                <div class="pull-right fa fa-angle-down"></div>
-              </a>
+            <div class="clearfix"></div>
+          </div>
+          <!-- END DIA 1 -->
+
+
+          <!-- DIA 2 -->
+          <div class="tab-pane fade" id="DayTwo">
+            <!-- DIA 2 Nav Tabs -->
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a href="#DayTwo-1" data-toggle="tab">Charlas - Salón de Honor</a>
+              </li>
+              <li>
+                <a href="#DayTwo-2" data-toggle="tab">Talleres - F-106</a>
+              </li>
+            </ul>
+
+            <!-- DIA 2 Tab panes -->
+            <div class="tab-content">
+              <!-- DIA 2 - TRACK 1 -->
+              <div class="tab-pane fade in active" id="DayTwo-1">
+                <article>
+                  <p>Aún no hay charlas programadas.</p>
+                </article>
               </div>
-            </div>
-            <div id="itemTwo" class="panel-collapse collapse">
-              <div class="panel-body">
-              <article>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
-              </article>
+              <!-- END DIA 2 - TRACK 1 -->
+
+              <!-- DIA 2 - TRACK 2 -->
+              <div class="tab-pane fade" id="DayTwo-2">
+                <article>
+                  <p>Aún no hay talleres programados.</p>
+                </article>
               </div>
-            </div>
-            </div>
-            <div class="panel panel-default">
-            <div class="speaker-wrapper">
-              <img src="static/img/speaker/speaker-3.jpg" class="img-responsive img-circle" alt="speaker-3" />
-            </div>
-            <div class="panel-heading">
-              <div class="panel-title">
-              <div class="time"><i class="fa fa-clock-o"></i> 5:40 PM</div>
-              <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemThree" class="collapsed">
-                Close your eyes around the world
-                <div class="pull-right fa fa-angle-up"></div>
-                <div class="pull-right fa fa-angle-down"></div>
-              </a>
-              </div>
-            </div>
-            <div id="itemThree" class="panel-collapse collapse">
-              <div class="panel-body">
-              <article>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
-              </article>
-              </div>
-            </div>
-            </div>
-            <div class="panel panel-default">
-            <div class="speaker-wrapper">
-              <img src="static/img/speaker/speaker-4.jpg" class="img-responsive img-circle" alt="speaker-4" />
-            </div>
-            <div class="panel-heading">
-              <div class="panel-title">
-              <div class="time"><i class="fa fa-clock-o"></i> 5:40 PM</div>
-              <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemFour" class="collapsed">
-                Passion and people
-                <div class="pull-right fa fa-angle-up"></div>
-                <div class="pull-right fa fa-angle-down"></div>
-              </a>
-              </div>
-            </div>
-            <div id="itemFour" class="panel-collapse collapse">
-              <div class="panel-body">
-              <article>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="author"><a href="#"><strong><i class="fa fa-user"></i> Michael Lambert</strong></a></p>
-              </article>
-              </div>
-            </div>
+              <!-- DIA 2 - TRACK 2 -->
+
             </div>
           </div>
+          <!-- END DIA 2 -->
+
+
+          <!-- HACK NIGHT -->
+          <div class="tab-pane fade" id="HackNight">
+            <!-- HACK NIGHT Nav Tabs -->
+            <ul class="nav nav-tabs">
+              <li class="active">
+                <a href="#HackNight-1" data-toggle="tab">Coding All night long</a>
+              </li>
+            </ul>
+
+          <!-- HACK NIGHT Tab panes -->
+            <div class="tab-content">
+              <!-- HACK NIGHT - ONLY TRACK -->
+              <div class="tab-pane fade in active" id="HackNight-1">
+                <article>
+                  <p>Se está programando.</p>
+                </article>
+              </div>
+              <!-- END HACK NIGHT - ONLY TRACK -->
+            </div>
           </div>
-          <div class="tab-pane fade" id="DayOne-2">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-          <div class="tab-pane fade" id="DayOne-3">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-          <div class="tab-pane fade" id="DayOne-4">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
+          <!-- END DIA 2 -->
+
         </div>
-        <div class="clearfix"></div>
+      </section>
 
+      <div class="btn-wrapper">
+        <a href="/media/Valparaiso_Mobile_Conf.pdf" class="btn btn-xs"><span class="icon icon-filetypes-11 icon-active"></span> <span class="btn-txt">Descargar programa</span></a>
       </div>
-
-
-      <div class="tab-pane fade" id="DayTwo">
-        <!-- Child 2 Nav Tabs -->
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#DayTwo-1" data-toggle="tab">Auditorium 1</a></li>
-          <li><a href="#DayTwo-2" data-toggle="tab">Auditorium 2</a></li>
-          <li><a href="#DayTwo-3" data-toggle="tab">Auditorium 3</a></li>
-          <li><a href="#DayTwo-4" data-toggle="tab">Class 2</a></li>
-        </ul>
-
-        <!-- Child 2 Tab panes -->
-        <div class="tab-content">
-          <div class="tab-pane fade in active" id="DayTwo-1">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-          <div class="tab-pane fade" id="DayTwo-2">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-          <div class="tab-pane fade" id="DayTwo-3">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-          <div class="tab-pane fade" id="DayTwo-4">
-          <article>
-            <p>No schedule yet.</p>
-          </article>
-          </div>
-        </div>
-
-      </div>
-      </div>
-    </section>
-
-    <div class="btn-wrapper">
-      <a href="#" class="btn btn-xs"><span class="icon icon-filetypes-11 icon-active"></span> <span class="btn-txt">Descargar programa</span></a>
-    </div>
     </div>
   </section>
   <!-- FIN PROGRAMA-->
@@ -466,7 +429,7 @@
       <div class="col-md-3 col-sm-3 col-xs-6">
       <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
         <div class="img-wrapper">
-        <img src="static/img/speaker/speaker-2.jpg" class="img-responsive img-circle" alt="speaker-2" />
+        <img src="/static/img/speaker/speaker-2.jpg" class="img-responsive img-circle" alt="speaker-2" />
         </div>
         <div class="name">Eric Doeson</div>
         <div class="sub">CTO Tinterest</div>
@@ -482,7 +445,7 @@
       <div class="col-md-3 col-sm-3 col-xs-6">
       <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
         <div class="img-wrapper">
-        <img src="static/img/speaker/speaker-3.jpg" class="img-responsive img-circle" alt="speaker-3" />
+        <img src="/static/img/speaker/speaker-3.jpg" class="img-responsive img-circle" alt="speaker-3" />
         </div>
         <div class="name">Emily Fork</div>
         <div class="sub">CEO Mahoo</div>
@@ -497,7 +460,7 @@
       <div class="col-md-3 col-sm-3 col-xs-6">
       <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
         <div class="img-wrapper">
-        <img src="static/img/speaker/speaker-4.jpg" class="img-responsive img-circle" alt="speaker-4" />
+        <img src="/static/img/speaker/speaker-4.jpg" class="img-responsive img-circle" alt="speaker-4" />
         </div>
         <div class="name">Martin Branson</div>
         <div class="sub">CFO Doogle</div>
