Se crea el formulario de registro de equipos para la Hackathon

--- a/main/static/register.html
+++ b/main/static/register.html
@@ -4,13 +4,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Home</title>
-    <meta name="description" content="PSD to HTML5+CSS3 conversion.">
-    <meta name="keywords" content="PSD, HTML5, CSS3">
-    <meta name="author" content="Erwin Kaddy">
+    <meta name="description" content="Conferencia sobre tecnologías móviles">
+  <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
+  <meta name="author" content="Gabriel Ruiz">
 
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
     <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.jpg' %}">
@@ -108,7 +107,6 @@
     <script type="text/javascript" src="{% static 'js/waypoints.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/waypoints-sticky.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.fancybox.js' %}"></script>
-    <script type="text/javascript" src="{% static 'mailchimp/js/mailing-list.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.validate.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/toastr.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/form-validation.js' %}"></script>
