--- a/main/static/index.html
+++ b/main/static/index.html
@@ -10,12 +10,7 @@
   <meta name="description" content="Conferencia sobre tecnologías móviles">
   <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
   <meta name="author" content="Gabriel Ruiz">
-
   <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
-  <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.jpg' %}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{% static 'img/apple-touch-icon-72x72.jpg' %}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{% static 'img/apple-touch-icon-114x114.jpg' %}">
-
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
 
@@ -36,9 +31,14 @@
   <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
 
   <!-- Hero Section -->
-  <section id="hero" class="light color" style="background-image: url({% static 'bg' %} / {{bg}});">
+  <section id="hero" class="light color" style="background-image: url({% static bg %});">
     <div class="overlay color"></div>
       <div class="container">
+        {% if success_message %}
+          <div class="alert alert-success top-alert alert-dismissible" role="alert">
+   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {{success_message}}</div>
+        {% endif %}
         <div class="home-bg">
           <nav class="navigation navigation-social">
             <ul class="navigation-bar">
@@ -889,7 +889,6 @@
   <script type="text/javascript" src="{% static 'js/waypoints.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/waypoints-sticky.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery.fancybox.js' %}"></script>
-  <script type="text/javascript" src="{% static 'mailchimp/js/mailing-list.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
