--- a/static/register_team.html
+++ b/static/register_team.html
@@ -25,6 +25,23 @@
 <body id="index" class="register-page">
 
     <header id="mobileheader" class="navigation-bar-header light visible-xs"></header>
+    <!-- Header -->
+  <header id="header" class="navigation-bar-header light hidden-xs">
+    <div class="container">
+      <nav class="navigation">
+        <div class="navigation-txt visible-xs" data-toggle="dropdown">Home</div>
+        <button class="navigation-toggle visible-xs" type="button" data-toggle="dropdown">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <ul class="navigation-bar navigation-bar-left">
+          <li><a href="/">Volver al inicio</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- End Header -->
 
     <!-- Hero Section -->
     <section id="hero" class="light" style="background-image: url({% static bg %});">
