Agregadas bases de Call for papers

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -9,7 +9,7 @@
   <title>Valparaíso Mobile Conf</title>
   <meta name="description" content="Conferencia sobre tecnologías móviles">
   <meta name="keywords" content="Android, iOS, Windows Phone, Valparaíso, Conferencia, Hackathon, Charlas, Talleres, Cursos, Móvil">
-  <meta name="author" content="Gabriel Ruiz">
+  <meta name="author" content="Valparaíso Mobile Conf">
   <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
   <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css' />
   <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css' />
