Quitado modo DEBUG. Se cambia una frase para hacerla más legible.

--- a/main/static/index.html
+++ b/main/static/index.html
@@ -132,7 +132,7 @@
               <div class="col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInRight" data-delay="500">
                 <h6>¿Qué haremos?</h6>
   	       <p>
-  	         Valparaíso Mobile Conf es desarrollo, es sociedad, es emprendimiento. Podrás aprender sobre las últimas tecnologías móviles, la integración entre plataformas, programación, diseño  y mucho más. Tendremos cuatro categorías de charlas: técnicas para principiante, nivel medio y avanzado, además de charlas de carácter general.
+  	         Valparaíso Mobile Conf es desarrollo, es sociedad, es emprendimiento. Podrás aprender sobre las últimas tecnologías móviles, la integración entre plataformas, programación, diseño  y mucho más. Contaremos con cuatro categorías de charlas: técnicas para principiante, nivel medio y avanzado, además de charlas de carácter general.
 	       </p>
                 <ul class="sub-list">
 	         <li><i class="fa fa-angle-right"></i> Diseño para móviles</li>
