Agrega imagenes de charlistas

--- a/static/index.html
+++ b/static/index.html
@@ -683,14 +683,13 @@
   <!-- FIN PROGRAMA-->
   {% endif %}
 
-  {% if speakers %}
   <!-- Speakers Section -->
   <section id="speakers" class="section light">
     <div class="overlay"></div>
     <div class="container">
     <div class="icon-wrap"><span class="icon icon-active icon-multimedia-12"></span></div>
     <h3>Expositores</h3>
-    <div class="sub-title">Expertos en TI compartirán su experiencia con nosotros.</div>
+    <div class="sub-title">Expertos compartirán su experiencia con nosotros.</div>
     <br />
     <br />
     <section class="row">
@@ -698,74 +697,138 @@
       <div class="col-md-3 col-sm-3 col-xs-6">
         <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
           <div class="img-wrapper">
-            <img src="{% static 'img/speaker/speaker-1.jpg' %}" class="img-responsive img-circle" alt="Foto {{speaker.get_full_name }}" />
+            <img src="{% static 'img/speaker/abraham_barrera.jpeg' %}" class="img-responsive img-circle" alt="Foto Abraham Barrera" />
           </div>
-          <div class="name">John Doeson</div>
-          <div class="sub">CEO Upbox</div>
-           <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <div class="name">Abraham Barrera</div>
+          <div class="sub">Full-Stack Developer en Lemontech </div>
+           <p class="small"></p>
           <div class="social-link">
-            <a href="#"><span class="fa fa-facebook"></span></a>
-            <a href="#"><span class="fa fa-twitter"></span></a>
-            <a href="#"><span class="fa fa-google-plus"></span></a>
+            <a href="https://twitter.com/abraham_barrera"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/abrahambarrera"><span class="fa fa-linkedin"></span></a>
           </div>
         </div>
       </div>
       <!-- end template expositor -->
 
       <div class="col-md-3 col-sm-3 col-xs-6">
-      <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-        <div class="img-wrapper">
-        <img src="{% static 'img/speaker/speaker-2.jpg' %}" class="img-responsive img-circle" alt="speaker-2" />
-        </div>
-        <div class="name">Eric Doeson</div>
-        <div class="sub">CTO Tinterest</div>
-        <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <div class="social-link">
-        <a href="#"><span class="fa fa-facebook"></span></a>
-        <a href="#"><span class="fa fa-twitter"></span></a>
-        <a href="#"><span class="fa fa-google-plus"></span></a>
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/fernando_ruiz.jpg' %}" class="img-responsive img-circle" alt="Foto Fernando Ruiz" />
+          </div>
+          <div class="name">Fernando Ruiz</div>
+          <div class="sub">Mobile Malware Researcher en Intel Security</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/ferruiz"><span class="fa fa-twitter"></span></a>
+            <a href="https://cl.linkedin.com/in/ferruiz"><span class="fa fa-linkedin"></span></a>
+          </div>
         </div>
       </div>
-      </div>
+
       <div class="clearfix visible-xs"></div>
+
       <div class="col-md-3 col-sm-3 col-xs-6">
-      <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
-        <div class="img-wrapper">
-        <img src="{% static 'img/speaker/speaker-3.jpg' %}" class="img-responsive img-circle" alt="speaker-3" />
-        </div>
-        <div class="name">Emily Fork</div>
-        <div class="sub">CEO Mahoo</div>
-        <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <div class="social-link">
-        <a href="#"><span class="fa fa-facebook"></span></a>
-        <a href="#"><span class="fa fa-twitter"></span></a>
-        <a href="#"><span class="fa fa-google-plus"></span></a>
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/rodrigo_ayala.jpg' %}" class="img-responsive img-circle" alt="Foto Rodrigo Ayala" />
+          </div>
+          <div class="name">Rodrigo Ayala</div>
+          <div class="sub">Desarrollador y Lider Técnico en Continuum</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/RodrigoAyala"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/rodrigoayaladelcastillo"><span class="fa fa-linkedin"></span></a>
+          </div>
         </div>
       </div>
-      </div>
+
       <div class="col-md-3 col-sm-3 col-xs-6">
-      <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
-        <div class="img-wrapper">
-        <img src="{% static 'img/speaker/speaker-4.jpg' %}" class="img-responsive img-circle" alt="speaker-4" />
-        </div>
-        <div class="name">Martin Branson</div>
-        <div class="sub">CFO Doogle</div>
-        <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <div class="social-link">
-        <a href="#"><span class="fa fa-facebook"></span></a>
-        <a href="#"><span class="fa fa-twitter"></span></a>
-        <a href="#"><span class="fa fa-google-plus"></span></a>
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/catalina_araya.jpg' %}" class="img-responsive img-circle" alt="Foto Catalina Ayala" />
+          </div>
+          <div class="name">Catalina Araya</div>
+          <div class="sub">Directora de Educación en Fundación País Digital</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/cataarayalira"><span class="fa fa-twitter"></span></a>
+            <a href="https://cl.linkedin.com/in/catalinaarayalira"><span class="fa fa-linkedin"></span></a>
+          </div>
         </div>
       </div>
+
+      <div class="clearfix visible-xs"></div>
+<!-- Por confirmar
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          </div>
+          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
       </div>
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/maria_gillet.jpg' %}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
+          </div>
+          <div class="name">Maria Paz Gillet</div>
+          <div class="sub">CEO & Co-Founder en Jooycar</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/mariapazgillet"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/mariapazgillet"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+-->
+      <div class="clearfix visible-xs"></div>
+<!-- Por confirmar
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/maria_gillet.jpg' %}" class="img-responsive img-circle" alt="Foto Maria Paz Gillet" />
+          </div>
+          <div class="name">Maria Paz Gillet</div>
+          <div class="sub">CEO & Co-Founder en Jooycar</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://twitter.com/mariapazgillet"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/mariapazgillet"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+          <div class="img-wrapper">
+          <img src="{% static 'img/speaker/juan_calderon.jpg' %}" class="img-responsive img-circle" alt="Foto Juan Felipe Calderón" />
+          </div>
+          <div class="name">Juan Felipe Calderón Maureira</div>
+          <div class="sub">Profesor Jornada Ing. Civil Informática en U. Andrés Bello</div>
+          <p class="small"></p>
+          <div class="social-link">
+            <a href="https://cl.linkedin.com/pub/juan-felipe-calder%C3%B3n-maureira/10/b40/8b6"><span class="fa fa-linkedin"></span></a>
+          </div>
+        </div>
+      </div>
+-->
+
     </section>
+    <!--
     <div class="btn-wrapper">
       <a href="#" class="btn btn-sm btn-default">See all speakers</a>
     </div>
+    -->
     </div>
   </section>
   <!-- End Speakers Section -->
-  {% endif %}
 
   <!-- HACKATHON Y PREMIOS -->
   <section id="hackathon" class="section dark">
@@ -831,9 +894,7 @@
       <div class="icon-wrap">
         <i class="fa fa-briefcase"></i>
       </div>
-      <h3>Organización</h3>
-
-        <div class="sub-title">Valparaíso Mobile Conf es traído a ustedes por:</div>
+      <h3>Organiza</h3>
         <br/>
         <div class="row">
           <ul class="list-inline">
